--- a/covid19_yokohama_analysis2022.ipynb
+++ b/covid19_yokohama_analysis2022.ipynb
@@ -55,17 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\shun_k\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3165: DtypeWarning: Columns (7,11) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -197,12 +189,14 @@
        "4      NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "patients_yoko = pd.read_csv('yokohama_covid19_patients.csv')\n",
     "patients_yoko.head()"
    ]
